Fix '-L' parameter handling

BUG:410962
FIXED-IN:1.8.2